chore: run format

--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -66,7 +66,8 @@ documentation, see the Storybooks for each framework below.
       id: 'checkbox',
       label: 'Checkbox',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="checkbox"
     knobs={{ Checkbox: ['indeterminate', 'disabled', 'hideLabel'] }}
@@ -75,11 +76,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-checkbox--checkbox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-checkbox--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
+    }}
+  >{`
 <fieldset className="bx--fieldset">
   <legend className="bx--label">Checkbox heading</legend>
   <Checkbox defaultChecked labelText="Checkbox label" id="checked" />
