--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -95,7 +95,8 @@ set whereas radio buttons allow the user to select only one option.
       id: 'checkbox',
       label: 'Checkbox',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="checkbox"
     knobs={{ Checkbox: ['indeterminate', 'disabled', 'hideLabel'] }}
@@ -104,11 +105,12 @@ set whereas radio buttons allow the user to select only one option.
         'https://react.carbondesignsystem.com/?path=/story/components-checkbox--checkbox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-checkbox--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
+    }}
+  >{`
 <fieldset className="bx--fieldset">
   <legend className="bx--label">Checkbox heading</legend>
   <Checkbox defaultChecked labelText="Checkbox label" id="checked" />
@@ -194,8 +196,8 @@ For more information about spacing for the checkbox component itself, see the
 
 #### Group labels (optional)
 
-- In most cases, a set of checkboxes is preceded by a group label to provide further
-  context or clarity.
+- In most cases, a set of checkboxes is preceded by a group label to provide
+  further context or clarity.
 - A group label can either state the category of the grouping or describe what
   actions to take below.
 - Use sentence case for group labels.
@@ -207,9 +209,9 @@ For more information about spacing for the checkbox component itself, see the
 
 - Always use clear and concise labels for checkboxes.
 - Labels appear to the right of checkbox inputs.
-- Regardless of whether the label is visible in the interface, a label is
-  always needed in code, whether it's for one checkbox or a group of them. See
-  the [checkbox code tab](https://www.carbondesignsystem.com/components/checkbox/code)
+- Regardless of whether the label is visible in the interface, a label is always
+  needed in code, whether it's for one checkbox or a group of them. See the
+  [checkbox code tab](https://www.carbondesignsystem.com/components/checkbox/code)
   for more information.
 
 ### Overflow content
@@ -312,7 +314,8 @@ the parent checkbox from the default checked state to the indeterminate state.
 
 Users can trigger an item by clicking the checkbox input directly or by clicking
 the checkbox label. Having both regions interactive creates a more accessible
-click target. The only hover effect when the mouse is placed over the target is a pointer shape change.
+click target. The only hover effect when the mouse is placed over the target is
+a pointer shape change.
 
 <Row>
 <Column colLg={8}>
@@ -324,7 +327,9 @@ click target. The only hover effect when the mouse is placed over the target is 
 
 #### Keyboard
 
-Users can navigate to and between checkbox inputs by pressing `Tab` or `Shift-Tab`. Users can trigger a state change by pressing `Space` while the checkbox input has focus. For additional keyboard interactions, see the
+Users can navigate to and between checkbox inputs by pressing `Tab` or
+`Shift-Tab`. Users can trigger a state change by pressing `Space` while the
+checkbox input has focus. For additional keyboard interactions, see the
 [accessibility tab](https://www.carbondesignsystem.com/components/checkbox/accessibility).
 
 ## Related
