--- a/src/pages/components/file-uploader/code.mdx
+++ b/src/pages/components/file-uploader/code.mdx
@@ -74,7 +74,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'upload-states',
       label: 'Upload states',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="file-uploader"
     knobs={{
@@ -85,11 +86,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--file-uploader',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <FileUploader
           accept={[
@@ -115,11 +117,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--drag-and-drop-upload-container-example-application',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--drag-and-drop',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <strong className='bx--file--label'>Account photo</strong>
         <p className='bx--label-description'>
@@ -145,11 +148,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--file-uploader-item',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <FileUploaderItem name='color.jpg' errorSubject='File size exceeds limits' errorBody='500 kb max file size. Select a new file and try again.'/>
       </div>
