--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -68,7 +68,8 @@ file uploader.
       id: 'upload-states',
       label: 'Upload states',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="file-uploader"
     knobs={{
@@ -79,11 +80,12 @@ file uploader.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--file-uploader',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <FileUploader
           accept={[
@@ -109,11 +111,12 @@ file uploader.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--drag-and-drop-upload-container-example-application',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--drag-and-drop',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <strong className='bx--file--label'>Account photo</strong>
         <p className='bx--label-description'>
@@ -139,11 +142,12 @@ file uploader.
         'https://react.carbondesignsystem.com/?path=/story/components-fileuploader--file-uploader-item',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-file-uploader--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
+    }}
+  >{`
       <div className="bx--file__container">
         <FileUploaderItem name='color.jpg' errorSubject='File size exceeds limits' errorBody='500 kb max file size. Select a new file and try again.'/>
       </div>
