--- a/src/pages/components/inline-loading/usage.mdx
+++ b/src/pages/components/inline-loading/usage.mdx
@@ -56,7 +56,8 @@ table, after a primary or secondary button click, or even in a modal.
       id: 'inline-loading',
       label: 'Inline loading',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="inline-loading"
     knobs={{
@@ -67,11 +68,12 @@ table, after a primary or secondary button click, or even in a modal.
         'https://react.carbondesignsystem.com/?path=/story/components-inlineloading--inline-loading',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-inline-loading--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
+    }}
+  >{`
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
 </ComponentDemo>
