--- a/src/pages/components/link/code.mdx
+++ b/src/pages/components/link/code.mdx
@@ -66,7 +66,8 @@ documentation, see the Storybooks for each framework below.
       id: 'link',
       label: 'Link',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="link"
     knobs={{ Link: ['disabled', 'inline'] }}
@@ -75,11 +76,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-link--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
+    }}
+  >{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
 </ComponentDemo>
