--- a/src/pages/components/number-input/usage.mdx
+++ b/src/pages/components/number-input/usage.mdx
@@ -39,7 +39,8 @@ or decrease an incremental value.
       id: 'mobile-number-input',
       label: 'Mobile',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="number-input"
     links={{
@@ -47,11 +48,12 @@ or decrease an incremental value.
         'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+    }}
+  >{`
     <NumberInput
       helperText="Optional helper text"
       id="tj-input"
@@ -70,11 +72,12 @@ or decrease an incremental value.
         'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+    }}
+  >{`
         <NumberInput
           isMobile
           helperText="Optional helper text"
