--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -66,7 +66,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'overflow-menu',
       label: 'Overflow menu',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="overflow-menu"
     knobs={{
@@ -79,8 +80,10 @@ usage documentation, see the Storybooks for each framework below.
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
+    }}
+  >{`
     <OverflowMenu
       data-floating-menu-container
       selectorPrimaryFocus={'.optionOne'}
