--- a/src/pages/components/progress-indicator/usage.mdx
+++ b/src/pages/components/progress-indicator/usage.mdx
@@ -36,7 +36,8 @@ percentage of completeness as each task is completed.
       id: 'progress-indicator',
       label: 'Progress indicator',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="progress-indicator"
     knobs={{
@@ -48,12 +49,13 @@ percentage of completeness as each task is completed.
         'https://react.carbondesignsystem.com/?path=/story/components-progressindicator--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-progress-indicator--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=progress-indicator',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
+    }}
+  >{`
   <div className="some-container">
     <ProgressIndicator currentIndex={1}>
         <ProgressStep
