--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -81,7 +81,8 @@ checkboxes allow the user to select multiple options.
       id: 'radio-button',
       label: 'Radio button',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="radio-button"
     knobs={{
@@ -92,11 +93,12 @@ checkboxes allow the user to select multiple options.
         'https://react.carbondesignsystem.com/?path=/story/components-radiobutton--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-radio--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=radio-button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
+    }}
+  >{`
   <FormGroup
   legendText="Radio button heading"
 >
