--- a/src/pages/components/slider/usage.mdx
+++ b/src/pages/components/slider/usage.mdx
@@ -53,7 +53,8 @@ value range.
       id: 'slider',
       label: 'Slider',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="slider"
     knobs={{ Slider: ['disabled', 'hideTextInput', 'light'] }}
@@ -62,11 +63,12 @@ value range.
         'https://react.carbondesignsystem.com/?path=/story/components-slider--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-slider--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvslider--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvslider--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=slider',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-slider--default',
+    }}
+  >{`
   <div className="some-container">
 <Slider
   ariaLabelInput="Label for slider value"
