--- a/src/pages/components/tag/code.mdx
+++ b/src/pages/components/tag/code.mdx
@@ -66,7 +66,8 @@ documentation, see the Storybooks for each framework below.
       id: 'tag',
       label: 'Tag',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="tag"
     knobs={{ Tag: ['filter', 'disabled'] }}
@@ -75,11 +76,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tag--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tag--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tag',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
+    }}
+  >{`
   <>
 <Tag type="red" title="Clear Filter"> Red </Tag>
 <Tag type="magenta" title="Clear Filter"> Magenta </Tag>
