--- a/src/pages/components/toggle/code.mdx
+++ b/src/pages/components/toggle/code.mdx
@@ -70,7 +70,8 @@ documentation, see the Storybooks for each framework below.
       id: 'small-toggle',
       label: 'Toggle small',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="default-toggle"
     links={{
@@ -78,11 +79,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}
+  >{`
     <Toggle
       aria-label="toggle button"
       defaultToggled
@@ -97,11 +99,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}
+  >{`
     <ToggleSmall
       aria-label="toggle button"
       defaultToggled
