--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -77,7 +77,8 @@ documentation, see the Storybooks for each framework below.
       id: 'icon-only',
       label: 'Icon only',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="button"
     knobs={{
@@ -88,11 +89,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+    }}
+  >{`
       <Button>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
@@ -105,11 +107,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+    }}
+  >{`
       <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
@@ -122,11 +125,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-button--icon-button',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
+    }}
+  >{`
       <Button
         hasIconOnly
         renderIcon={Add16}
