--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -97,7 +97,8 @@ import { Add16 } from '@carbon/icons-react';
       id: 'icon-only',
       label: 'Icon only',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="button"
     knobs={{
@@ -108,11 +109,12 @@ import { Add16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+    }}
+  >{`
       <Button>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
@@ -125,11 +127,12 @@ import { Add16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
+    }}
+  >{`
       <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
   <ComponentVariant
@@ -142,11 +145,12 @@ import { Add16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-button--icon-button',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
+    }}
+  >{`
       <Button
         hasIconOnly
         renderIcon={Add16}
