--- a/src/pages/components/code-snippet/code.mdx
+++ b/src/pages/components/code-snippet/code.mdx
@@ -80,7 +80,8 @@ import {
       id: 'code-snippet-inline',
       label: 'Inline',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="code-snippet-single"
     knobs={{ CodeSnippet: ['light'] }}
@@ -89,11 +90,12 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--singleline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
+    }}
+  >{`
     <CodeSnippet type="single">
     ${codeSnippetSingle}
     </CodeSnippet>
@@ -106,11 +108,12 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--multiline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
+    }}
+  >{`
     <CodeSnippet type="multi">
     ${codeSnippet}
     </CodeSnippet>
@@ -123,11 +126,12 @@ import {
         'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--inline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
+    }}
+  >{`
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
 </ComponentDemo>
