--- a/src/pages/components/content-switcher/code.mdx
+++ b/src/pages/components/content-switcher/code.mdx
@@ -67,7 +67,8 @@ code usage documentation, see the Storybooks for each framework below.
       id: 'content-switcher',
       label: 'Content switcher',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="content-switcher"
     knobs={{
@@ -79,12 +80,13 @@ code usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-contentswitcher--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-content-switcher--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=content-switcher',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
+    }}
+  >{`
 <ContentSwitcher onChange={console.log}>
   <Switch name={'first'} text='First section' />
   <Switch name={'second'} text='Second section' />
