--- a/src/pages/components/form/code.mdx
+++ b/src/pages/components/form/code.mdx
@@ -66,7 +66,8 @@ documentation, see the Storybooks for each framework below.
       id: 'form',
       label: 'Form',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="form"
     knobs={{
@@ -80,11 +81,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-form--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
+    }}
+  >{`
   <Form>
   <div style={{marginBottom: '2rem'}}>
     <TextInput
