--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -65,7 +65,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'inline-loading',
       label: 'Inline loading',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="inline-loading"
     knobs={{
@@ -76,11 +77,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-inlineloading--inline-loading',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-inline-loading--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
+    }}
+  >{`
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
 </ComponentDemo>
