--- a/src/pages/components/loading/usage.mdx
+++ b/src/pages/components/loading/usage.mdx
@@ -40,7 +40,8 @@ three seconds.
       id: 'loading',
       label: 'Loading',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="loading"
     knobs={{ Loading: ['small', 'withOverlay'] }}
@@ -49,11 +50,12 @@ three seconds.
         'https://react.carbondesignsystem.com/?path=/story/components-loading--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-loading--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
+    }}
+  >{`
     <Loading
       description="Active loading indicator" withOverlay={false}
     />
