--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -89,7 +89,8 @@ destructive or irreversible then use a transactional danger modal.
       id: 'with-three-buttons',
       label: 'With three buttons',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="modal"
     knobs={{
@@ -100,11 +101,12 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}
+  >{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -120,11 +122,12 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
+    }}
+  >{`
     <ModalWrapper
       hasScrollingContent
       size="sm"
@@ -167,11 +170,12 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
+    }}
+  >{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -188,11 +192,12 @@ destructive or irreversible then use a transactional danger modal.
         'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
+    }}
+  >{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
