--- a/src/pages/components/notification/code.mdx
+++ b/src/pages/components/notification/code.mdx
@@ -70,7 +70,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'inline',
       label: 'Inline notification',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="toast"
     knobs={{
@@ -81,11 +82,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-notifications--toast',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--toast',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
+    }}
+  >{`
     <div>
       <ToastNotification
         caption="00:00:00 AM"
@@ -106,11 +108,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-notifications--inline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-notification--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
+    }}
+  >{`
   <div>
     <InlineNotification
       kind="info"
