--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -70,7 +70,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'mobile-number-input',
       label: 'Mobile',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="number-input"
     links={{
@@ -78,11 +79,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+    }}
+  >{`
     <NumberInput
       helperText="Optional helper text"
       id="tj-input"
@@ -101,11 +103,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
+    }}
+  >{`
         <NumberInput
           isMobile
           helperText="Optional helper text"
