--- a/src/pages/components/overflow-menu/usage.mdx
+++ b/src/pages/components/overflow-menu/usage.mdx
@@ -35,7 +35,8 @@ there is a space constraint.
       id: 'overflow-menu',
       label: 'Overflow menu',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="overflow-menu"
     knobs={{
@@ -48,8 +49,10 @@ there is a space constraint.
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
+    }}
+  >{`
     <OverflowMenu
       data-floating-menu-container
       selectorPrimaryFocus={'.optionOne'}
