--- a/src/pages/components/pagination/code.mdx
+++ b/src/pages/components/pagination/code.mdx
@@ -66,7 +66,8 @@ usage documentation, see the Storybooks for each framework below.
       id: 'pagination',
       label: 'Pagination',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="pagination"
     knobs={{
@@ -82,11 +83,12 @@ usage documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-pagination--pagination',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-pagination--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
+    }}
+  >{`
   <div style={{width: '800px'}}>
     <Pagination
       backwardText="Previous page"
