--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -65,7 +65,8 @@ documentation, see the Storybooks for each framework below.
       id: 'tabs',
       label: 'Tabs',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="tabs"
     knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
@@ -74,11 +75,12 @@ documentation, see the Storybooks for each framework below.
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
+    }}
+  >{`
 <div style={{ width: '50%' }}>
   <Tabs scrollIntoView={false}>
     <Tab
