--- a/src/pages/components/tag/usage.mdx
+++ b/src/pages/components/tag/usage.mdx
@@ -60,7 +60,8 @@ that particular category.
       id: 'tag',
       label: 'Tag',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="tag"
     knobs={{ Tag: ['filter', 'disabled'] }}
@@ -69,11 +70,12 @@ that particular category.
         'https://react.carbondesignsystem.com/?path=/story/components-tag--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tag--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tag',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
+    }}
+  >{`
   <>
 <Tag type="red" title="Clear Filter"> Red </Tag>
 <Tag type="magenta" title="Clear Filter"> Magenta </Tag>
