--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -49,7 +49,8 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       id: 'small-toggle',
       label: 'Toggle small',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="default-toggle"
     links={{
@@ -57,11 +58,12 @@ user “flips the switch”. They are commonly used for “on/off” switches.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}
+  >{`
     <Toggle
       aria-label="toggle button"
       defaultToggled
@@ -76,11 +78,12 @@ user “flips the switch”. They are commonly used for “on/off” switches.
         'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
+    }}
+  >{`
     <ToggleSmall
       aria-label="toggle button"
       defaultToggled
