--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -53,7 +53,8 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}>
+  scope={{ Filter16 }}
+>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -61,11 +62,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltip--default-bottom',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
+    }}
+  >{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -92,11 +94,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-icon--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
+    }}
+  >{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -113,11 +116,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipdefinition--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-definition--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
+    }}
+  >{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
